gccida/c2/dump_bb
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dump_bb/src/cfgrtl.c:1904:10: error: use of undeclared identifier 'unk_6476BF'
fwrite( &unk_6476BF, 0x11uLL, 1uLL, outf); 
         ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dump_bb/src/obj/cfgrtl.o] Error 1
